FIxed user input alignment
Fixed issue that caused misaligned input to be drawn

--- a/RiemannWeb/wwwroot/css/site.css
+++ b/RiemannWeb/wwwroot/css/site.css
@@ -90,12 +90,9 @@ a {
 
 .fullscreen canvas {
     display: none;
-    min-height: 100%;
+    width: 100%;
     position: absolute;
     top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
 }
 
 .remove {
